# llmwatch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  sync-pricing.yml  sync-reranker-pricing.yml
examples/: basic_anthropic.py  basic_openai.py  budget_alert.py  multi_db.py  report_export.py  streaming.py
scripts/: sync_pricing.py
src/llmwatch/: __init__.py  budget.py  cli.py  context.py  cost.py  dashboard.py  dashboard_html.py  instrument.py  reporting.py  tracker.py
src/llmwatch/data/: pricing.json  pricing_reranker.json
src/llmwatch/databases/: __init__.py  base.py  functions.py  mongo.py  sqlalchemy.py
src/llmwatch/extractors/: __init__.py  anthropic.py  base.py  cohere.py  google.py  openai.py  serializer.py  streaming.py  voyageai.py
src/llmwatch/pricing/: __init__.py  registry.py  sync.py
src/llmwatch/schemas/: __init__.py  budget.py  pricing.py  reporting.py  tags.py  usage.py
tests/: conftest.py  test_cli.py  test_cost.py  test_dashboard.py  test_extractors.py  test_functions.py  test_instrument.py  test_instrument_streams.py  test_models.py  test_pricing_sync.py  test_reporting.py  test_reranker.py  test_serializer.py  test_storage.py  test_streaming.py  test_sync.py  test_tracker.py
