[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmwatch"
version = "0.2.0"
description = "Track, tag, and report LLM API costs by feature, user, and model."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DanMeon" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10",
    "typer>=0.23",
    "rich>=13.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
pg = ["asyncpg>=0.29"]
mysql = ["aiomysql>=0.2"]
oracle = ["oracledb>=2.0"]
mssql = ["aioodbc>=0.5"]
mongo = ["beanie>=2.0"]
dashboard = ["starlette>=0.40", "uvicorn>=0.30"]

[project.urls]
Homepage = "https://github.com/DanMeon/llmwatch"
Repository = "https://github.com/DanMeon/llmwatch"
Issues = "https://github.com/DanMeon/llmwatch/issues"

[project.scripts]
llmwatch = "llmwatch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llmwatch"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "starlette.*",
    "uvicorn.*",
    "beanie.*",
    "motor.*",
    "pymongo.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.4",
    "starlette>=0.40",
]
